# CitySmart-

./: .gitignore  CMakeLists.txt  CityMap.cpp  CityMap.h  CitySmart_Project_Presentation.pptx  EmergencyVehicle.cpp  EmergencyVehicle.h  GameCommon.h  LICENSE  README.md  SmartCity_Rapport_Groupe16.docx  TrafficLight.h  Vehicle.h  main.cpp  test.txt  vcpkg.json  vehicle.cpp
assets/: main.cpp
